--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-    <header id="header">
+    <header id="header" class="scroll">
         <nav class="container">
             <h1><a href="#" class="logo">Beauty<span>Salon</span>.</a></h1>
 
@@ -93,20 +93,22 @@
                 </header>
                 <div class="cards grid">
                     <div class="card">
-                        <div class="icon-woman-hair"></div>
+                        <i class="icon-woman-hair"></i>
                         <h3 class="title">Terapia Capilar</h3>
                         <p>Terapia completa para couro cabeludo e fios, protegendo todos os tipos de cabelos, inclusive
                             os longos e finos.</p>
                     </div>
                     <div class="card">
-                        <div class="icon-trim"></div>
+                        <i class="icon-trim"></i>
                         <h3 class="title">Cortes</h3>
-                        <p>A nossa equipe é repleta de profissionais renomados, famosos por lançarem tendências com cortes diferenciados e clássicos.</p>
+                        <p>A nossa equipe é repleta de profissionais renomados, famosos por lançarem tendências com
+                            cortes diferenciados e clássicos.</p>
                     </div>
                     <div class="card">
-                        <div class="icon-cosmetic"></div>
+                        <i class="icon-cosmetic"></i>
                         <h3 class="title">Tratamentos</h3>
-                        <p>O beautysalon conta com diversos tratamentos naturais e totalmente veganos, para qualquer tipo 
+                        <p>O beautysalon conta com diversos tratamentos naturais e totalmente veganos, para qualquer
+                            tipo
                             de cabelo.</p>
                     </div>
                 </div>
